take d3 out of require, load it with fisheye

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <meta charset="utf-8">
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
+  <script src="//d3js.org/d3.v3.min.js"></script>
+  <script src="scripts/lib/fisheye.js"></script>
 </head>
 
 <body>
