move tweets to a different component

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <canvas id="getImageData" style="display:none"></canvas>
   <div id="main"></div>
   <script src="scripts/bundle.js"></script>
 </body>
