--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <body>
   <canvas id="getImageData" style="display:none"></canvas>
   <div id="main"></div>
-  <script src="scripts/bundle.js"></script>
+  <script src="scripts/bundle.min.js"></script>
 </body>
