titles and wordings and such

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
+  <title>tweety: a portrait of tweets</title>
   <meta charset="utf-8">
+  <meta property='og:image' content='images/tweety_screenshot.png'/>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
   <script src="//d3js.org/d3.v3.min.js"></script>
